Made the instructions way prettier
Much nicer version than the last.

--- a/index.html
+++ b/index.html
@@ -1,44 +1,295 @@
+<!doctype html>
 <html>
 <head>
-	<title>Popcorn on a stovetop</title>
-</head>
-<body background="https://img.aws.livestrongcdn.com/ls-article-image-673/ds-photo/getty/article/103/159/178487114.jpg" style="width: 673px; height: 504px;">
-<h3><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>To make popcorn on a stovetop:</strong></samp></span></h3>
+<style>
+@charset "UTF-8";
+#mainwrapper header {
+	background-color: rgba(208,207,207,1.00);
+	overflow: auto;
+	font-family: montserrat, sans-serif;
+	font-style: normal;
+	font-weight: 400;
+}
+#mainwrapper header #logo {
+	width: 28%;
+	float: left;
+	padding-left: 2%;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	color: rgba(146,146,146,1.00);
+}
+#mainwrapper header nav {
+	text-align: right;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	padding-right: 2%;
+	width: 68%;
+	float: left;
+	color: rgba(146,146,146,1.00);
+}
+header nav a {
+	padding-right: 2%;
+}
+#content #mainContent h1, #content #mainContent h2 {
+	color: rgba(146,146,146,1.00);
+}
+#content #mainContent h3 {
+	font-family: source-sans-pro, sans-serif;
+	font-style: normal;
+	font-weight: 200;
+	color: rgba(146,146,146,1.00);
+}
+#content #mainContent #bannerImage {
+	width: 100%;
+	background-color: rgba(208,207,207,1.00);
+}
+#content #mainContent p {
+	color: rgba(146,146,146,1.00);
+	font-family: source-sans-pro, sans-serif;
+	font-style: normal;
+	font-weight: 200;
+	text-align: justify;
+}
+#content #mainContent #authorInfo {
+	background-color: rgba(208,207,207,1.00);
+}
+#content #mainContent #authorInfo h2, #content #mainContent #authorInfo p {
+	color: rgba(255,255,255,1.00);
+	padding-left: 2%;
+	padding-top: 11px;
+}
+#content #mainContent #authorInfo p {
+	color: rgba(255,255,255,1.00);
+	padding-left: 2%;
+	padding-top: 0px;
+	padding-bottom: 11px;
+	padding-right: 2%;
+}
+footer article {
+	width: 46%;
+	float: left;
+	padding-left: 2%;
+	padding-right: 2%;
+	text-align: justify;
+	font-family: source-sans-pro, sans-serif;
+	font-style: normal;
+	font-weight: 200;
+	color: rgba(146,146,146,1.00);
+}
+footer article h3 {
+	text-align: center;
+	font-family: montserrat, sans-serif;
+	font-style: normal;
+	font-weight: 400;
+}
+#mainContent {
+	padding-left: 2%;
+	width: 71%;
+	float: left;
+	padding-right: 2%;
+	padding-top: 41px;
+}
+#mainwrapper #content #sidebar {
+	width: 19%;
+	padding-left: 2%;
+	padding-right: 2%;
+	float: left;
+	background-color: rgba(246,246,246,1.00);
+	margin-top: 150px;
+	padding-top: 32px;
+}
+#mainwrapper {
+	width: 80%;
+	overflow: auto;
+	margin-left: 10%;
+}
+#content #sidebar input {
+	width: 98%;
+	height: 32px;
+}
+#content #sidebar #adimage {
+	width: 100%;
+	background-color: rgba(208,207,207,1.00);
+	margin-top: 46px;
+	float: none;
+	overflow: auto;
+}
+nav ul li {
+	list-style-type: none;
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+nav ul {
+	padding-left: 0%;
+}
+nav ul li a {
+	color: rgba(146,146,146,1.00);
+	text-decoration: none;
+}
+#footerbar {
+	height: 18px;
+	clear: both;
+	background-color: rgba(208,207,207,1.00);
+	width: 100%;
+}
+footer {
+	width: 71%;
+	padding-left: 2%;
+	padding-right: 2%;
+}
+.notOnDesktop {
+	display: none;
+}
+#mainContent #bannerImage img {
+	width: 100%;
+}
+#sidebar #adimage img {
+	width: 100%;
+	float: left;
+}
+#mainwrapper header nav a {
+	color: rgba(146,146,146,1.00);
+	text-decoration: none;
+}
 
-<ol>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Melt a spoon full of coconut oil in a large, deep pot at a medium temperature.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Add 3-4 popcorn kernels and wait for them to pop.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Add the rest of the kernels to the bowl. Half a cup of popcorn kernels makes approximately 10 cups of popcorn.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Cover the pot and remove from the heating element.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Wait 30 seconds and then return to heat. Keep the lid ajar so that the steam can escape.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Let the popcorn pop. Give the pot a gentle shake every now and then.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Once the popping slows, remove from the heat and uncover the pot.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Pour the popcorn into a bowl.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Return the pot to the heat and melt butter inside it.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3 style="margin-bottom: 0cm;"><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Once the butter is melted, remove from the heat and drizzle onto the popcorn in the bowl.</strong></samp></span></h3>
-	</li>
-	<li>
-	<h3><span style="font-family:verdana,geneva,sans-serif;"><samp><strong>Add salt to bowl, mix, and enjoy!</strong></samp></span></h3>
-	</li>
-</ol>
+@media screen and (max-width:769px) {
+.notOnDesktop {
+	display: block;
+	text-align: right;
+	padding-right: 8px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	width: 96%;
+}
+#content .notOnDesktop input {
+	height: 28px;
+}
+#mainContent {
+	padding-top: 0px;
+	float: none;
+	width: 96%;
+}
+#sidebar input {
+	display: none;
+}
+#mainwrapper #content #sidebar {
+	float: none;
+	width: 92%;
+	padding-top: 13px;
+	overflow: auto;
+	margin-top: 3px;
+	margin-left: 2%;
+	padding-bottom: 13px;
+}
+#content #sidebar #adimage {
+	width: 60%;
+	margin-top: 0px;
+	float: left;
+}
+#content #sidebar nav {
+	width: 36%;
+	float: left;
+	padding-left: 4%;
+}
+#sidebar nav ul {
+	margin-top: 0px;
+}
+footer {
+	width: 96%;
+	padding-left: 2%;
+	padding-right: 2%;
+}
+#content footer article {
+	width: 46%;
+}
+#mainwrapper header {
+	width: 100%;
+}
+}
+
+@media screen and (max-width:480px) {
+#mainwrapper header #logo {
+	width: 96%;
+	margin-left: 2%;
+}
+#mainwrapper header nav {
+	text-align: center;
+	background-color: rgba(255,255,255,1.00);
+	width: 98%;
+}
+#content #sidebar #adimage {
+	width: 100%;
+}
+#content #sidebar nav {
+	width: 96%;
+	padding-top: 7px;
+}
+#sidebar nav ul li {
+	display: inline-block;
+	width: 32%;
+	text-align: center;
+}
+#mainwrapper #content #sidebar {
+	padding-bottom: 0px;
+}
+#content .notOnDesktop {
+	width: 100%;
+	text-align: center;
+	padding-left: 0px;
+	padding-right: 0px;
+}
+#content .notOnDesktop input {
+	width: 80%;
+	text-align: center;
+}
+#content #mainContent h3 {
+	font-size: 14px;
+}
+#content footer article {
+	width: 96%;
+}
+}
+</style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Making Popcorn on a Stovetop</title>
+
+
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+</head>
+
+<body>
+<div id="mainwrapper">
+  <div id="content">
+    <div class="notOnDesktop"> 
+      <!-- This search box is displayed only in mobile and tablet laouts and not in desktop layouts -->
+      <input type="text" placeholder="Search">
+    </div>
+    <section id="mainContent"> 
+
+      <h1><!-- Blog title -->Making Popcorn on a Stovetop</h1>
+      <h3><!-- Tagline -->Popcorn in 10 easy steps.</h3>
+      <div id="bannerImage"><img src="http://3.bp.blogspot.com/-ALKAnJ6a01U/UL4Gf3H96pI/AAAAAAAAObk/ytyLlcan1k8/s1600/Popcorn+Wallpapers+07.jpg" alt=""/></div>
+      <p>Here's How:</p>
+      <p>1. Heat a spoonful of oil at a medium temperature in a large, deep pot.</p>
+      <p>2. Add 3-4 popcorn kernels, cover the pot, and wait for them to pop.</p>
+      <p>3. Add the rest of the kernels to the pot. Half a cup of popcorn kernels makes approximately 10 cups of popcorn.</p>
+      <p>4. Remove from the heating element. Wait 30 seconds and then return to heat. Make sure to keep the lid slightly ajar so that steam can escape.</p>
+      <p>5. Let the popcorn pop. Give the pot a gentle shake every now and then.</p>
+      <p>6. Once the popping slows, remove from the heat and uncover the pot.</p>
+      <p>7. Pour the popcorn into a bowl.</p>
+      <p>8. Return the pot to the heat and melt butter inside it.</p>
+      <p>9. Once the butter is melted, remove from the heat and drizzle onto the popcorn in the bowl.</p>
+      <p>10. Add salt to taste, mix, and enjoy!<br>
+      </p>
+<aside id="authorInfo"> 
+        <!-- The author information is contained here -->
+        <h2>Eli Goldman</h2>
+        <p>This page was written as part of the stretch task given to me by Red Hat.</p>
+        <p> Thank you for reading and for considering me for this role! </p>
+      </aside>
+    </section>
+</div>
+</div>
 </body>
 </html>
